# langchain-wire

./: LICENSE  README.md  pyproject.toml
langchain_wire/agent/: ollama_tools.py  openai_tools.py
langchain_wire/tool/: extract_text.py
langchain_wire/toolkit/: toolkit.py
