[tool.poetry]
name = "langchain-wire"
version = "0.1.0"
description = ""
authors = ["zysoong <ziyang.song@gmx.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
